develop: Jump behavior fix

--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,21 @@
 
 .score {
   position: relative;
-  margin-left: 25%;
-  margin-top: -10px;
-  font-size: large !important;
+  margin-left: 80px;
+  margin-top: -5px;
+  font-size: x-large !important;
   font-weight: bold;
   color: #4E3B31;
+}
+
+.scoreTitle {
+  position: relative;
+  margin-left: 8%;
+  margin-top: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #4E3B31;
+  text-transform: uppercase;
 }
 
 
